# timekeeper

./: Cargo.toml
docs/: index.html  sw.js
src/: app.rs  database.rs  gui.rs  history.rs  lib.rs  main.rs  settings.rs  stopwatch.rs
src/database/: migrations.rs
