[package]
name = "timekeeper"
default-run = "timekeeper_bin"
version = "0.1.0"
authors = ["Chris Clegg <chrisclegg256@ieee.org>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "timekeeper_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "clock", "std"], default-features = false } # For time formatting
eframe = { version = "0.23.0", features = ["persistence"] } # Gives us egui, epi and web+native backends
egui-datepicker = "0.3.0"
rusqlite = { version = "0.27", features = ["bundled", "chrono"] }
directories-next = { version = "2.0.0" }
tracing = { version = "0.1" }
tracing-subscriber = "0.2"
anyhow = "1.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
